--- a/SuperTicTacToe.html
+++ b/SuperTicTacToe.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Super Tic Tac Toe</title>
+	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css"/>
 
 </head>
@@ -16,21 +17,11 @@
 
 			<p>
 			Each small 3-by-3 tic-tac-toe board is referred to as a local board, and the larger 3-by-3 board is referred to as the global board. Each move sends the opponent to its relative location on the global board. If an X is played in the top right square of a local board, then the O must be played in the top right local board of the global board. 
-			Here is <a href="https://upload.wikimedia.org/wikipedia/commons/3/36/Ultimate_tic-tac-toe_forced_move.png" target="_blank">a visual example move</a>.
+			Here is <a href="https://upload.wikimedia.org/wikipedia/commons/3/36/Ultimate_tic-tac-toe_forced_move.png" target="_blank">a visual of an example move</a>.
 			</p>
-
-			<div>
-				
-			</div>
-
-
 
 			<p>If a move is played so that it is to win a local board by the rules of normal tic-tac-toe, then the entire local board is marked as a victory for the player in the global board. Moves that send players to this won board are still valid. </p>
 			<p> Game play ends when either a player wins the global board, or there are no legal moves remaining.</p>
-
-
-
-			
 		</div>
 		<div class="choosePlayer">
 			<!-- 
